# predators

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
deepocean/: __init__.py  dynamics.py  env.py  render.py
scripts/: record.py  train.py
tests/: test_env.py
