[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "deepocean"
version = "0.1.0"
description = "A top-down shark-evasion reinforcement-learning environment (Gymnasium)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Yahia Ferchichi" }]
dependencies = ["gymnasium>=0.29", "numpy>=1.23", "pygame>=2.5"]

[project.optional-dependencies]
train = ["stable-baselines3>=2.0", "torch>=2.0"]
media = ["imageio>=2.31", "imageio-ffmpeg>=0.4"]
dev = ["pytest>=7.0", "ruff>=0.1"]

[tool.setuptools.packages.find]
include = ["deepocean*"]

[tool.ruff]
line-length = 100
